Fix mis-aligned header logo

--- a/styles/header.less
+++ b/styles/header.less
@@ -6,8 +6,7 @@ header {
   top: 0;
 
   > .container {
-    display: flex;
-    align-content: center;
+    align-items: center;
     justify-content: center;
   }
 }
